<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="155dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="5dp"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_margin="15dp"
            android:elevation="2dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="date"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="date"/>
        </LinearLayout>

    </LinearLayout>


    <Switch
        android:id="@+id/broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Broadcast"
        android:layout_margin="5dp"
        android:textSize="20dp"/>



    <Button
        android:id="@+id/edit_user_details"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/edit_user"/>


    <Button
        android:id="@+id/change_pw"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/change_password"/>

    <Button
        android:id="@+id/delete_acc"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/delete_account" />

</LinearLayout>
